# bbc_micro_emu

./: .gitignore  Cargo.toml  README.md
disks/: .gitkeep
roms/: .gitkeep
scripts/: fetch_roms.sh
src/: acia6850.rs  audio.rs  bus.rs  crtc.rs  display.rs  fdc8271.rs  gamepad.rs  hardware.rs  lib.rs  machine.rs  main.rs  memory.rs  renderer.rs  sheila.rs  sn76489.rs  snapshot.rs  system_via.rs  tube.rs  upd7002.rs  user_via.rs  via6522.rs  video_ula.rs
tests/: basic_eval.rs  boot_to_basic.rs  devices.rs  dfs_disk.rs  dsd.rs  elite_disk.rs  fdc_streaming.rs  inspect_boot.rs  joystick.rs  keyboard_input.rs  mode4_draw.rs  mode7_demo.rs  mode7_with_mos_font.rs  renderer.rs  skeleton.rs  snapshot.rs  sound.rs
