[package]
name = "bbc_micro_emu"
version = "0.1.0"
edition = "2024"
description = "BBC Micro Model B emulator (Acorn 1981) built on the mos6502_emu CPU core."
license = "MIT"
repository = "https://github.com/AlexMelanFromRingo/bbc_micro_emu"
readme = "README.md"
keywords = ["bbc-micro", "emulator", "6502", "retro", "acorn"]
categories = ["emulators"]
publish = false

[dependencies]
mos6502_emu = { path = "../mos6502_emu" }
winit = "0.30"
softbuffer = "0.4"
cpal = { version = "0.15", optional = true }
gilrs = { version = "0.10", optional = true }

[features]
default = ["audio", "gamepad"]
# Pulls in cpal so the windowed binary streams SN76489 audio in real time.
# Disable with `--no-default-features` for headless CI / WSL boxes without
# an audio backend.
audio = ["dep:cpal"]
# Pulls in gilrs for real gamepad input → Machine::set_joystick_*. Disable
# on hosts without a usable input layer (e.g. headless containers).
gamepad = ["dep:gilrs"]

[profile.release]
lto = "thin"
codegen-units = 1
